Archive2/0e/158c8851104231/output
main.cpp: In function 'int main()':
main.cpp:4:44: error: 'wstring' is not a member of 'std'
     static_assert( ::std::is_literal_type< ::std::wstring & >::value, "Nope" );
                                            ^
main.cpp:4:44: error: 'wstring' is not a member of 'std'
main.cpp:4:61: error: template argument 1 is invalid
     static_assert( ::std::is_literal_type< ::std::wstring & >::value, "Nope" );
                                                             ^
